use swagger generated api
